# titanfall2-multiplayer-fix

./: .gitignore  LICENSE  README.md  icon.rc
launcher-method/: README.md
launcher-method/source/: CMakeLists.txt  main.cpp
shim-method/: README.md  Titanfall2OpenSSLFix.sdb  install.bat  uninstall.bat
